[gd_scene load_steps=7 format=3 uid="uid://xldlauc2kn4l"]

[ext_resource type="Texture2D" uid="uid://kvgjwy1by0pp" path="res://graphics/ui/dialog.png" id="1_51kqs"]
[ext_resource type="Script" path="res://scenes/shop.gd" id="1_pei0h"]
[ext_resource type="Texture2D" uid="uid://bmv8tw7x51418" path="res://graphics/ui/reroll_base.png" id="3_ol156"]
[ext_resource type="Texture2D" uid="uid://dm8o0gt5qx3dv" path="res://graphics/ui/reroll_pressed.png" id="4_6rj3f"]
[ext_resource type="Texture2D" uid="uid://dtuc3iok0oa03" path="res://graphics/ui/reroll_hover.png" id="5_bhiog"]
[ext_resource type="BitMap" uid="uid://d1g6sy1g51o6u" path="res://graphics/ui/reroll_bitmap.png" id="6_jqsw5"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_pei0h")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(256, 64)
rotation = 1.5708
scale = Vector2(0.5, 1)
texture = ExtResource("1_51kqs")

[node name="RerollButton" type="TextureButton" parent="."]
offset_left = 380.0
offset_right = 508.0
offset_bottom = 128.0
scale = Vector2(0.4, 0.4)
pivot_offset = Vector2(64, 64)
texture_normal = ExtResource("3_ol156")
texture_pressed = ExtResource("4_6rj3f")
texture_hover = ExtResource("5_bhiog")
texture_click_mask = ExtResource("6_jqsw5")
stretch_mode = 0

[node name="PiecePositions" type="Node2D" parent="."]

[node name="Position1" type="Marker2D" parent="PiecePositions"]
position = Vector2(63, 64)

[node name="Position2" type="Marker2D" parent="PiecePositions"]
position = Vector2(140, 64)

[node name="Position3" type="Marker2D" parent="PiecePositions"]
position = Vector2(213, 64)

[node name="Position4" type="Marker2D" parent="PiecePositions"]
position = Vector2(290, 64)

[node name="Position5" type="Marker2D" parent="PiecePositions"]
position = Vector2(367, 64)

[node name="Pieces" type="Node2D" parent="."]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="RerollButton" to="." method="_on_reroll_button_pressed"]
